--- a/style.scss
+++ b/style.scss
@@ -1,11 +1,33 @@
-@import url('https://fonts.googleapis.com/css2?family=Saira+Condensed:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Saira+Condensed:wght@300&display=swap");
 
 * {
   margin: 0;
   padding: 0;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   text-decoration: none;
   font-family: Arial, Helvetica, sans-serif;
+}
+
+html {
+  height: 100%;
+}
+
+.grid_container {
+  display: grid;
+  grid-template-rows: 200px;
+  border: 1px;
+  border-radius: 20px;
+  border-style: solid;
+  border-width: 5px;
+  border-color: #000000;
+}
+
+.item1 {
+  background-color: #ff0000;
+  display: flex;
+  text-align: center;
+  flex-wrap: wrap;
 }
 
 .logo {
@@ -16,7 +38,10 @@
 /*card*/
 
 .tarjetas {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
 }
 
@@ -26,8 +51,15 @@
   padding-bottom: 40px;
   margin: auto;
   margin-top: 60px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
   flex-direction: row;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
 }
 
@@ -36,6 +68,7 @@
   position: relative;
   margin: 20px;
   font-family: 'Poppins' , sans-serif;
+  -webkit-transition: all 300ms;
   transition: all 300ms;
   border-radius: 20px;
   overflow: hidden;
@@ -46,15 +79,21 @@
   height: 220px;
   background: #eff3f5;
   padding: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   position: relative;
   z-index: 1;
 
   i {
     font-size: 150px;
-    color: rgb(255, 255, 255);
+    color: white;
   }
 }
 
@@ -65,6 +104,7 @@
   background: #eff3f5;
   padding: 20px;
   margin-top: -220px;
+  -webkit-transition: all 400ms cubic-bezier(0.5, 0, 0, 1);
   transition: all 400ms cubic-bezier(0.5, 0, 0, 1);
 
   p {
@@ -74,7 +114,6 @@
     display: -moz-box;
     display: box;
     -webkit-box-orient: vertical;
-    -moz-box-orient: vertical;
     box-orient: vertical;
     -webkit-line-clamp: 5;
     line-clamp: 5;
@@ -91,10 +130,15 @@
     cursor: pointer;
     border: none;
     border-radius: 20px;
+    -webkit-box-shadow: 1px 1px 30px -5px #20202049;
     box-shadow: 1px 1px 30px -5px #20202049;
+    -webkit-transition: -webkit-box-shadow 300ms;
+    transition: -webkit-box-shadow 300ms;
     transition: box-shadow 300ms;
+    transition: box-shadow 300ms, -webkit-box-shadow 300ms;
 
     &:hover {
+      -webkit-box-shadow: 1px 1px 30px -5px #20202070;
       box-shadow: 1px 1px 30px -5px #20202070;
     }
   }
@@ -102,25 +146,23 @@
 
 /*color de las card*/
 
-.c1, .c2, .c3 {
-  &:hover .icono {
-    background: #000000;
-  }
+.c1:hover .icono, .c2:hover .icono, .c3:hover .icono {
+  background: #000000;
+}
 
-  .icono i {
-    color: #000000;
-  }
+.c1 .icono i, .c2 .icono i, .c3 .icono i {
+  color: #000000;
+}
 
-  &:hover .icono i {
-    color: white;
-  }
+.c1:hover .icono i, .c2:hover .icono i, .c3:hover .icono i {
+  color: white;
 }
 
 /*fin de color de las card*/
-
 /*animaciones*/
 
 .card:hover {
+  -webkit-box-shadow: 1px 1px 20px -10px #20202049;
   box-shadow: 1px 1px 20px -10px #20202049;
 
   .informacion {
@@ -130,23 +172,21 @@
 
 /*fin de animaciones*/
 
-.d1, .d2, .d3, .d4, .d5 {
-  &:hover .icono {
-    background: #000000;
-  }
+.d1:hover .icono, .d2:hover .icono, .d3:hover .icono, .d4:hover .icono, .d5:hover .icono {
+  background: #000000;
+}
 
-  .icono i {
-    color: #000000;
-  }
+.d1 .icono i, .d2 .icono i, .d3 .icono i, .d4 .icono i, .d5 .icono i {
+  color: #000000;
+}
 
-  &:hover .icono i {
-    color: white;
-  }
+.d1:hover .icono i, .d2:hover .icono i, .d3:hover .icono i, .d4:hover .icono i, .d5:hover .icono i {
+  color: white;
 }
 
 .d6 {
   &:hover .icono {
-    background: rgb(0, 0, 0);
+    background: black;
   }
 
   .icono i {
@@ -164,7 +204,18 @@ h1 {
   text-align: center;
 }
 
+/*destacados*/
+
 .card_2 {
+  width: 300px;
+  position: relative;
+  margin: 20px;
+  font-family: 'Poppins' , sans-serif;
+  -webkit-transition: all 300ms;
+  transition: all 300ms;
+  border-radius: 20px;
+  background-color: #cec6c6;
+
   img {
     width: 300px;
     height: 300px;
@@ -172,21 +223,15 @@ h1 {
   }
 
   h5 {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     padding: 20px 40px;
     margin-top: 20px;
-    color: rgb(0, 0, 0);
+    color: black;
     font-weight: 500;
     font-size: 14px;
   }
-
-  width: 300px;
-  position: relative;
-  margin: 20px;
-  font-family: 'Poppins' , sans-serif;
-  transition: all 300ms;
-  border-radius: 20px;
-  background-color: #cec6c6;
 
   p {
     padding: 20px 40px;
@@ -195,7 +240,10 @@ h1 {
 }
 
 .destacado {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   max-width: 1200px;
   padding: 40px;
@@ -203,7 +251,12 @@ h1 {
   margin: auto;
   margin-top: 60px;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
   flex-direction: row;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
 }
 
@@ -215,3 +268,248 @@ h1 {
   color: whitesmoke;
   margin-left: 25%;
 }
+
+/*destacados*/
+
+/*Cards ayuda*/
+
+.container-card {
+  width: 100%;
+  display: flex;
+  max-width: 1100px;
+  margin: auto;
+}
+
+.title-cards {
+  width: 100%;
+  max-width: 1080px;
+  margin: auto;
+  padding: 20px;
+  margin-top: 20px;
+  text-align: center;
+  color: #7a7a7a;
+}
+
+.card-ayuda {
+  width: 100%;
+  margin: 20px;
+  border-radius: 6px;
+  overflow: hidden;
+  background: #fff;
+  box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2);
+  transition: all 400ms ease-out;
+  cursor: default;
+
+  &:hover {
+    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.4);
+    transform: translateY(-3%);
+  }
+
+  img {
+    width: 100%;
+    height: 210px;
+  }
+
+  .contenido-card {
+    padding: 15px;
+    text-align: center;
+
+    h3 {
+      margin-bottom: 15px;
+      color: #7a7a7a;
+    }
+
+    p {
+      line-height: 1.8;
+      color: #6a6a6a;
+      font-size: 14px;
+      margin-bottom: 5px;
+    }
+
+    a {
+      display: inline-block;
+      padding: 10px;
+      margin-top: 10px;
+      text-decoration: none;
+      color: #2fb4cc;
+      border: 1px solid #2fb4cc;
+      border-radius: 4px;
+      transition: all 400ms ease;
+      margin-bottom: 5px;
+    }
+  }
+}
+
+.card .contenido-card a:hover {
+  background: #2fb4cc;
+  color: #fff;
+}
+
+@media only screen and (min-width: 320px) and (max-width: 768px) {
+  .container-card {
+    flex-wrap: wrap;
+  }
+
+  .card-ayuda {
+    margin: 15px;
+  }
+}
+
+/*Fin-Cards ayuda*/
+
+footer {
+  position: static;
+  bottom: 0;
+  left: 0;
+  height: fit-content;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: var(--dark);
+  color: white;
+  background-color: #121212;
+}
+
+.copyright-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-top: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.copyright {
+  font-size: 12px;
+  opacity: 0.7;
+  font-weight: 400;
+  padding: 10px 0;
+}
+
+.footer-menus {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 40%;
+}
+
+.footer-container {
+  height: fit-content;
+  width: 100%;
+  padding: 3rem 6rem;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.footer-content-container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: column;
+}
+
+.footer-info {
+  margin: 0.2rem 0;
+  opacity: 0.7;
+  color: white;
+  text-decoration: none;
+  transition: 0.5s;
+}
+
+.menu-item-footer {
+  margin: 0.2rem 0;
+  opacity: 0.7;
+  color: white;
+  text-decoration: none;
+  transition: 0.5s;
+
+  &:hover {
+    opacity: 1;
+  }
+}
+
+.menu-title {
+  font-size: var(--medium-text-font);
+  font-weight: 400;
+  text-transform: uppercase;
+  margin-bottom: 1.2rem;
+}
+
+.social-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 30px;
+  width: 100%;
+}
+
+.social-link {
+  height: 100%;
+  width: 30px;
+  background-image: url(./img/FacebookBlanco.png);
+  background-size: 70%;
+  background-position: center;
+  margin-right: 1rem;
+  background-repeat: no-repeat;
+
+  &:hover {
+    opacity: 0.7;
+  }
+}
+
+footer .social-link {
+  &:nth-of-type(2) {
+    background-image: url(./img/TwitterBlanco.png);
+  }
+
+  &:nth-of-type(3) {
+   
+    background-image: url(./img/LinkedinBlanco.png);
+  }
+}
+
+/*MEDIA QUERY*/
+@media (max-width: 768px) {
+  .footer-container {
+    padding: 2rem;
+    flex-direction: column;
+  }
+
+  .footer-content-container {
+    width: 100%;
+    padding: 2rem 0;
+    border-bottom: 1px solid #2A2A2A;
+    justify-content: center;
+    align-items: center;
+
+    &:nth-of-type(1) {
+      align-items: flex-start;
+    }
+
+    &:nth-of-type(3) {
+      border-bottom: none;
+      padding-bottom: 0;
+    }
+  }
+
+  .footer-menus {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    border-bottom: 1px solid #2A2A2A;
+
+    .footer-content-container {
+      &:nth-of-type(1), &:nth-of-type(2) {
+        width: 45%;
+        align-items: flex-start;
+        border-bottom: none;
+      }
+    }
+  }
+}
+
+/*# sourceMappingURL=style.css.map */
